[gd_scene load_steps=2 format=3 uid="uid://dbrh6u4ejiu0u"]

[ext_resource type="Script" path="res://scripts/ui/game_over_menu.gd" id="1_gameover"]

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_gameover")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Nivel Alcanzado: 1
Tiempo Sobrevivido: 00:00
Enemigos Eliminados: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Reiniciar"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Men√∫ Principal"
